Исправление недочётов(версия 2.0)

--- a/app/index.html
+++ b/app/index.html
@@ -41,9 +41,9 @@
 	<!-- Баннер. Начало. -->
 	<section class="banner py-5 bg-light">
         <div class="container">
-            <div class="row justify-content-center align-items-center">
+            <div class="d-flex justify-content-between align-items-center">
 				<!-- Заказать такси -->
-                <div class="left-side col-lg-6">
+                <div class="left-side">
 					<div class="right-side-text">
 						<h2 class="text-dark fs48 ">Двигайся <span class="text-orange fs48">с комфортом</span></h2>
 						<h3 class="tex-dark fs24">Машины Премиум класса по цене Эконом</h3>
@@ -54,7 +54,7 @@
 					</div>
                 </div>
 				<!-- Услуги -->
-                <div class="right-side col-lg-6 text-right justify-content-end align-items-center" >
+                <div class="right-side text-right justify-content-end align-items-center" >
 					<div class="right-side-element align-items-center">
 						<h4 class="text-white fs18">Предварительный заказ <img src="img/dest/phone-white.png" alt=""></h4>
 					</div>
@@ -87,22 +87,26 @@
 			<div class="uslugi-title">
 				<h2 class="text-dark fs48 font-weight-bold ">Наши<span class="text-orange fs48"> услуги</span></h2>
 			</div>
-			<div class="tabs row d-flex justify-content-center align-items-center col-md-12">
-				<div class="uslugi-tabs text-center col-md-6">
-					<h3 class="tabs-title text-white fs36">Такси для гостей города</h3>
-					<h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+			<div class="tabs d-flex justify-content-center align-items-center">
+				<div class="mx-1">
+					<div class="uslugi-tabs-1 text-center my-2">
+						<h3 class="tabs-title text-white fs36">Такси для гостей города</h3>
+						<h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+					</div>
+					<div class="uslugi-tabs-2 text-center my-2">
+						<h3 class="tabs-title text-white fs36">Такси для нижегородцев</h3>
+						<h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+					</div>
 				</div>
-				<div class="uslugi-tabs text-center col-md-6">
-					<h3 class="tabs-title text-white fs36">Такси для нижегородцев</h3>
-					<h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
-				</div>
-				<div class="uslugi-tabs text-center col-md-6">
-					<h3 class="tabs-title text-white fs36">Такси по области и РФ</h3>
-					<h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
-				</div>
-				<div class="uslugi-tabs text-center col-md-6">
-					<h3 class="tabs-title text-white fs36">Услуга "трезвый водитель"</h3>
-					<h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+				<div class="mx-1">
+					<div class="uslugi-tabs-3 text-center my-2">
+						<h3 class="tabs-title text-white fs36 ">Такси по области и РФ</h3>
+						<h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+					</div>
+					<div class="uslugi-tabs-4 text-center my-2">
+						<h3 class="tabs-title text-white fs36">Услуга "трезвый водитель"</h3>
+						<h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+					</div>
 				</div>
 			</div>
 		</div>
