--- a/app/services.html
+++ b/app/services.html
@@ -44,22 +44,26 @@
             <div class="uslugi-title">
                 <h2 class="text-dark fs48 font-weight-bold ">Наши<span class="text-orange fs48"> услуги</span></h2>
             </div>
-            <div class="tabs row d-flex justify-content-center align-items-center">
-                <div class="uslugi-tabs text-center">
-                    <h3 class="tabs-title text-white fs36">Такси для гостей города</h3>
-                    <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+            <div class="tabs d-flex justify-content-center align-items-center">
+                <div class="mx-1">
+                    <div class="uslugi-tabs-1 text-center my-2">
+                        <h3 class="tabs-title text-white fs36">Такси для гостей города</h3>
+                        <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+                    </div>
+                    <div class="uslugi-tabs-2 text-center my-2">
+                        <h3 class="tabs-title text-white fs36">Такси для нижегородцев</h3>
+                        <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+                    </div>
                 </div>
-                <div class="uslugi-tabs text-center">
-                    <h3 class="tabs-title text-white fs36">Такси для нижегородцев</h3>
-                    <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
-                </div>
-                <div class="uslugi-tabs text-center">
-                    <h3 class="tabs-title text-white fs36">Такси по области и РФ</h3>
-                    <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
-                </div>
-                <div class="uslugi-tabs text-center">
-                    <h3 class="tabs-title text-white fs36">Услуга "трезвый водитель"</h3>
-                    <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+                <div class="mx-1">
+                    <div class="uslugi-tabs-3 text-center my-2">
+                        <h3 class="tabs-title text-white fs36 ">Такси по области и РФ</h3>
+                        <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+                    </div>
+                    <div class="uslugi-tabs-4 text-center my-2">
+                        <h3 class="tabs-title text-white fs36">Услуга "трезвый водитель"</h3>
+                        <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+                    </div>
                 </div>
             </div>
         </div>
