Исправление недочётов 03.12 (ебучие подменю, я твой рот шатал)

--- a/app/index.html
+++ b/app/index.html
@@ -23,17 +23,19 @@
 			<!-- Ссылки(ПК) -->
 			<ul class="links list-unstyled d-flex">
 				<li><a href="#" class="text-dark p-2 p-xl-3 fs18">Главная</a></li>
-				<li><a href="#" class="text-dark p-2 p-xl-3 fs18">Услуги</a></li>
+				<li><a href="#" class="links-uslugi text-dark p-2 p-xl-3 fs18">Услуги</a></li>
+					<ul class="links-submenu list-unstyled mt-3">
+						<li><a href="#">Такси для гостей города</a></li>
+						<li><a href="#">Такси области и РФ</a></li>
+						<li><a href="#">Такси для нижегородцев</a></li>
+						<li><a href="#">Трезвый водитель</a></li>
+					</ul>
 				<li><a href="#" class="text-dark p-2 p-xl-3 fs18">Контакты</a></li>
 			</ul>
 			<!-- Телефон -->
-			<div class="phone d-inline">
-				<div class="header-phone d-flex justify-content-end align-items-center">
-					<img src="img/dest/phone-icon.png" alt="" class="mx-1"> <a href="#" class="text-orange fs24 font-weight-bold">413-76-37</a>
-				</div>
-				<div class="header-city p-0 m-0">
-					<span class="text-dark fs18">по Новгороду и области</span>
-				</div>
+			<div class="phone d-flex flex-column align-items-end lh1">
+					<a href="tel:413-76-37" class="text-orange fs24 font-weight-bold d-flex align-items-center"><img src="img/phone-icon.svg" alt="" class="mx-1">413-76-37</a>
+					<p class="mb-0 fs18">по Новгороду и области</p>
 			</div>
 		</div>
 	</header>
