--- a/app/services.html
+++ b/app/services.html
@@ -47,18 +47,18 @@
             <div class="tabs d-flex justify-content-center align-items-center">
                 <div class="mx-1">
                     <div class="uslugi-tabs-1 text-center my-2">
-                        <h3 class="tabs-title text-white fs36">Такси для гостей города</h3>
-                        <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+                        <p class="tabs-title text-white fs36">Такси для гостей города</p>
+                        <p class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
                     </div>
                     <div class="uslugi-tabs-2 text-center my-2">
-                        <h3 class="tabs-title text-white fs36">Такси для нижегородцев</h3>
-                        <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+                        <p class="tabs-title text-white fs36">Такси для нижегородцев</p>
+                        <p class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
                     </div>
                 </div>
                 <div class="mx-1">
                     <div class="uslugi-tabs-3 text-center my-2">
-                        <h3 class="tabs-title text-white fs36 ">Такси по области и РФ</h3>
-                        <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+                        <p class="tabs-title text-white fs36 ">Такси по области и РФ</p>
+                        <p class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
                     </div>
                     <div class="uslugi-tabs-4 text-center my-2">
                         <h3 class="tabs-title text-white fs36">Услуга "трезвый водитель"</h3>
